let's not use invisible class right to avoid some problems in the relation section in the entity edition view

--- a/data/css/bootstrap.css
+++ b/data/css/bootstrap.css
@@ -3339,9 +3339,6 @@ a.thumbnail:hover {
 .show {
   display: block;
 }
-.invisible {
-  visibility: hidden;
-}
 .fade {
   -webkit-transition: opacity 0.15s linear;
   -moz-transition: opacity 0.15s linear;
